adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -13,4 +13,5 @@
 <hr>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est accusamus nesciunt quam necessitatibus minus perferendis porro? Sed, ipsum praesentium
      aperiam quos nemo corrupti tempora ipsam molestias. Totam numquam sint ea!</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, architecto asperiores aut facilis hic impedit reiciendis quae! Sed corrupti, delectus quas, assumenda itaque, accusantium possimus id nam quae laborum est.</p>
 </html>
